# kenja_tools

./: .gitignore  Cargo.toml
junk/: ani_chara_mix.rs  common.rs  top_chara.rs
src/: anime.rs  api.rs  commands.rs  data.rs  documents.rs  lib.rs  main.rs
src/commands/: flatten.rs
src/documents/: anime.rs  anime_chara.rs  anime_raw.rs  anime_search.rs  anime_src.rs  id.rs  local.rs
src/junk/: ani_chara.rs  ani_chara_mix.rs  quarter_list.rs
