[package]
name = "kenja_tools"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
chrono = { version = "0.4.40", features = ["serde"]}
clap = { version = "4.5.31", features = ["derive"]}
dotenvy = "0.15.7"
futures = "0.3.31"
mongodb = "3.2.1"
reqwest = "0.12.12"
serde = { version = "1.0.217", features = ["serde_derive"] }
serde_json = "1.0.138"
serde_repr = "0.1.20"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "fs"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
