[package]
name = "kenja_tools"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.95"
blake3 = "1.8.2"
chrono = { version = "0.4.40", features = ["serde"]}
clap = { version = "4.5.31", features = ["derive"]}
dotenvy = "0.15.7"
futures = "0.3.31"
hex = "0.4.3"
mongodb = "3.2.1"
reqwest = {version = "0.12.12", features = ["stream", "gzip", "zstd", "deflate", "brotli"]}
serde = { version = "1.0.217", features = ["serde_derive"] }
serde_json = "1.0.138"
serde_repr = "0.1.20"
serde_with = "3.12.0"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread", "fs", "time"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.19"
url = "2.5.4"
